hphp/hack/test/typecheck/variablevariable_disallowed.php
<?hh

function foo(): array<int> {
  $n = 10;
  $x = "n";
  return $$x;
}
